plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.2'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'ru.alex'
version = '1.0.0'
description = 'event-space-api'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

apply from: 'version.gradle'

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-amqp'
    implementation 'org.liquibase:liquibase-core'
    implementation "org.hibernate.orm:hibernate-core:${versions.hibernate}"
    implementation "io.hypersistence:hypersistence-utils-hibernate-71:${versions.hypersistenceUtils}"
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation "com.auth0:java-jwt:${versions.auth0Jwt}"
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation "com.github.ben-manes.caffeine:caffeine:${versions.caffeine}"
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation "io.github.openfeign.querydsl:querydsl-jpa:${versions.querydsl}"
    implementation "io.github.openfeign.querydsl:querydsl-core:${versions.querydsl}"
    implementation "jakarta.persistence:jakarta.persistence-api:${versions.jakarta}"
    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${versions.openapi}"
    implementation "tools.jackson.core:jackson-databind:${versions.jackson}"
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-liquibase'
    implementation "net.logstash.logback:logstash-logback-encoder:${versions.logstash}"
    implementation "com.github.loki4j:loki-logback-appender:${versions.loki4j}"
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    implementation "org.mapstruct:mapstruct:${versions.mapstruct}"
    annotationProcessor "org.mapstruct:mapstruct-processor:${versions.mapstruct}"
    annotationProcessor "io.github.openfeign.querydsl:querydsl-apt:${versions.querydsl}:jpa"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api:${versions.jakarta}"
    runtimeOnly 'org.postgresql:postgresql'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

sourceSets {
    main {
        java {
            srcDirs += ['build/generated/sources/annotationProcessor/java/main']
        }
    }
}

test {
    useJUnitPlatform()
}

clean {
    delete file('build/generated')
}
